--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@solidjs/router": "^0.14.1",
     "solid-js": "^1.8.18"
   },
   "devDependencies": {
